crates/strider/tests/snapshots/v3__aarch64be__calling_convention__forward_8.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x210204:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "10" -> "1" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "11" -> "1" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "12" -> "1" [color="#ff8800", label=arg8, fontcolor="#cccccc", fontsize=9];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "13" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v16" [color="#888888", style=dashed];
  "v16" -> "13" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "18" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0xffffffffffffffd0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0xffffffffffffffd4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0xffffffffffffffd8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "34" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xffffffffffffffdc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "42" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xffffffffffffffe4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "44" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "48" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="arg[7] ← x7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "51" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "51" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="arg[6] ← x6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "53" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="arg[5] ← x5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="arg[4] ← x4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "57" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="arg[3] ← x3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "59" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="arg[2] ← x2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "61" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "63" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "64" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "65" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "66" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x220a4c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "67" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "68" -> "65" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x220a4c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "51" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "69" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "70" -> "67" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x220a4c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "53" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "69" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "71" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "72" -> "69" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x220a4c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "55" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "73" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "74" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x220a4c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "57" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "75" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "76" -> "73" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x220a4c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "59" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "77" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "78" -> "75" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x220a4c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "61" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "77" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "79" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "80" -> "77" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x220a4c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "63" -> "77" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "81" -> "79" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "79" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "79" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "81" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "82" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "81" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "81" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "83" -> "82" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "82" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "53" -> "82" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "84" -> "83" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "83" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "83" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "84" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "85" -> "84" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "84" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "84" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "85" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "86" -> "85" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "85" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "59" -> "85" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "86" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "87" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "86" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "86" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "87" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "88" -> "87" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "87" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "87" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "88" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "89" -> "88" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "90" -> "88" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "91" -> "88" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "91" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "90" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "90" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "92" -> "90" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "92" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "89" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "93" -> "89" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "94" -> "89" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "95" -> "89" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "95" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "94" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "94" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "96" -> "94" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "96" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "93" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
